--- a/public/work/essays/index.html
+++ b/public/work/essays/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
@@ -15,7 +17,7 @@
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Seneca&#39;s essays"/>
 <meta name="twitter:description" content="Traditionally given in the following order:
- De Providentia (On providence) - addressed to Lucilius De Constantia Sapientis (On the Firmness of the Wise Person) - addressed to Serenus De Ira (On anger) – A study on the consequences and the control of anger - addressed to his brother Novatus Ad Marciam, De consolatione (To Marcia, On Consolation) – Consoles her on the death of her son De Vita Beata (On the Happy Life) - addressed to Gallio  &hellip;"/>
+ De Providentia (On providence) - addressed to Lucilius De Constantia Sapientis (On the Firmness of the Wise Person) - addressed to Serenus De Ira (On anger) &ndash; A study on the consequences and the control of anger - addressed to his brother Novatus Ad Marciam, De consolatione (To Marcia, On Consolation) &ndash; Consoles her on the death of her son De Vita Beata (On the Happy Life) - addressed to Gallio  &hellip;"/>
 
 
   </head>
@@ -59,8 +61,7 @@
 <h1><span class="title">Seneca&#39;s essays</span></h1>
 
 <h3 class="author">
-Lucius Annaeus Seneca
-</h3>
+Lucius Annaeus Seneca</h3>
 
 <h3 class="date">2017-06-14</h3>
 <p class="terms">
@@ -81,8 +82,8 @@ Lucius Annaeus Seneca
 <ol>
 <li><em>De Providentia</em> (<em>On providence</em>) - addressed to Lucilius</li>
 <li><em>De Constantia Sapientis</em> (<em>On the Firmness of the Wise Person</em>) - addressed to Serenus</li>
-<li><em>De Ira</em> (<em>On anger</em>) – A study on the consequences and the control of anger - addressed to his brother Novatus</li>
-<li><em>Ad Marciam, De consolatione</em> (<em>To Marcia, On Consolation</em>) – Consoles her on the death of her son</li>
+<li><em>De Ira</em> (<em>On anger</em>) &ndash; A study on the consequences and the control of anger - addressed to his brother Novatus</li>
+<li><em>Ad Marciam, De consolatione</em> (<em>To Marcia, On Consolation</em>) &ndash; Consoles her on the death of her son</li>
 <li><em>De Vita Beata</em> (<em>On the Happy Life</em>) - addressed to Gallio</li>
 </ol>
 <p>&hellip;</p>
@@ -204,6 +205,19 @@ Lucius Annaeus Seneca
 
 
 
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-183991274-1', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
 
 
 
