--- a/public/work/tragedies/index.html
+++ b/public/work/tragedies/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
@@ -60,8 +62,7 @@
 <h1><span class="title">Seneca&#39;s tragedies</span></h1>
 
 <h3 class="author">
-Lucius Annaeus Seneca
-</h3>
+Lucius Annaeus Seneca</h3>
 
 <h3 class="date">2017-06-13</h3>
 <p class="terms">
@@ -210,6 +211,19 @@ Lucius Annaeus Seneca
 
 
 
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-183991274-1', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
 
 
 
