--- a/content/_index.html
+++ b/content/_index.html
@@ -8,9 +8,8 @@ title: "Home"
 <p><a href="https://github.com/yihui/hugo-xmin"><img src="favicon.ico" style="max-width:15%;min-width:40px;float:right;" alt="Github repo" /></a></p>
 <div id="jw-learn" class="section level1">
 <h1>JW-LEARN</h1>
-<div id="a-learning-journal-by-jw-tsai" class="section level2">
-<h2><em>A learning journal by JW Tsai</em></h2>
-<p><strong>Focus on Measurement theories and methods</strong></p>
+<div id="a-learning-journal-by-jw-tsaifocus-on-edpsy-measurement." class="section level2">
+<h2><em>A learning journal by JW Tsai,</br>Focus on Ed/Psy Measurement.</em></h2>
 <p><strong>XMin</strong> is a Hugo theme written by <a href="https://yihui.org">Yihui Xie</a> in about four hours: half an hour was spent on the Hugo templates, and 3.5 hours were spent on styling. The main motivation for writing this theme was to provide a really minimal example to beginners of Hugo templates. This XMin theme contains about 130 lines of code in total, including the code in HTML templates and CSS (also counting empty lines).</p>
 <pre class="bash"><code>find . -not -path &#39;*/exampleSite/*&#39; \( -name &#39;*.html&#39; -o -name &#39;*.css&#39; \) | xargs wc -l</code></pre>
 <p>I can certainly further reduce the code, for example, by eliminating the CSS, but I believe a tiny bit of CSS can greatly improve readability. You cannot really find many CSS frameworks that only contain 50 lines of code.</p>
