--- a/content/_index.html
+++ b/content/_index.html
@@ -31,7 +31,7 @@ title: "Home"
 <li>LCA 與 CDM、以及</li>
 <li>其他新興模型（Pairwise Comparison, Proximity, Response Time, and Network Models, etc.）。</li>
 </ul>
-<p>而這些少數的人，又多半已經是教授、研究員、學者專家等級的人物。也就是說在測統這塊領域，<mark>新手跟頂級高手的 level 相差非常遠，而中間循序漸進的過度鷹架（中文內容）幾乎沒有，完全只能靠英語文獻</mark>。很簡單可以證明，你可以在博客來上面找看看，有幾本中文的教科書專門再介紹上面講的那些模型，除了 IRT 跟 LCA 有幾本以外，其他幾乎沒有。</p>
+<p>而這些少數的人，又多半已經是教授、研究員、學者專家等級的人物。也就是說在測統這塊領域，<mark>新手跟頂級高手的 level 相差非常遠，而中間循序漸進的過度鷹架（中文內容）幾乎沒有，完全只能靠英語文獻</mark>。很簡單可以證明，你可以在博客來上面找看看，有幾本中文教科書專門介紹上面講的那些模型，除了 IRT 跟 LCA 有幾本以外，其他幾乎沒有。</p>
 </div>
 <div id="ta-是誰" class="section level2">
 <h2>TA 是誰？</h2>
