--- a/content/_index.html
+++ b/content/_index.html
@@ -35,8 +35,8 @@ title: "Home"
 </div>
 <div id="ta-是誰" class="section level2">
 <h2>TA 是誰？</h2>
-<p>所以我們這些初級學生得要重新爬過文獻。因此，我的第一個超級用戶就是<mark>未來的我自己</mark>，這些筆記是寫給未來的我看的，他除了學習之外也方便把這些片段的紀錄系統整理起來。</p>
-<p>另一方面我也希望能把這個足跡留下來，給有興趣學習測驗統計/心理計量這塊領域的高中生/大學生/研究生們參考。畢竟在中文世界裡面，當代測量理論的確有一大塊從入門到精通的知識內容缺口。</p>
+<p>所以我們這些初級學生得要重新爬過文獻。我的第一個超級用戶就是<mark>未來的我自己</mark>，這些筆記是寫給未來的我看的，他除了學習之外也方便把這些片段的紀錄系統整理起來。</p>
+<p>另一方面我也希望能把這個足跡留下來，給有興趣學習測驗統計/心理計量這塊領域的高中生/大學生/研究生們參考。畢竟在中文世界裡面，當代測量理論的確有一大塊<strong>從入門到精通</strong>（希望不是從入門到放棄）的知識內容缺口。</p>
 </div>
 <div id="預計會包含哪些內容" class="section level2">
 <h2>預計會包含哪些內容？</h2>
