--- a/content/_index.html
+++ b/content/_index.html
@@ -8,8 +8,8 @@ title: "Home"
 <p><a href="/"><img src="favicon.ico" style="max-width:15%;min-width:40px;float:right;" alt="Github repo" /></a></p>
 <div id="jw-learn" class="section level1">
 <h1>JW-LEARN</h1>
-<div id="a-learning-journal-by-jw-tsaifocus-on-edpsy-measurement." class="section level3">
-<h3><em>A Learning Journal by JW Tsai,</br>Focus on Ed/Psy Measurement.</em></h3>
+<div id="hello-welcome-to-jw-learn.-this-blog-is-a-learning-journal-that-focuses-on-knowledge-related-to-educational-measurement-and-psychometrics." class="section level3">
+<h3><em>Hello, Welcome to JW-LEARN.<br> This blog is a learning journal that focuses on knowledge related to educational measurement and psychometrics.</em></h3>
 <hr />
 </div>
 <div id="為什麼要寫這個筆記" class="section level2">
@@ -24,7 +24,7 @@ title: "Home"
 <li>或整理書上或文章上的理論或流程。</li>
 </ul>
 <p>這些都很值得我整理起來，一方面也跟大家分享。</p>
-<p>在台灣的教育或心理學領域裡面，真正算得上是測驗統計或心理計量領域的研究者本來就已經不多。而這些學者裡面真正關注在「當代測量模型」的人可以說是非常稀有（我把 SEM 相關的那些都排除掉了，寫 SEM 的人倒是滿多的）。根據 Sijtsma 和 van der Ark (2020) 在 <em>Measurement models for psychological attributes</em> 書中定義的，就聚焦在：</p>
+<p>在台灣的教育或心理學領域裡面，真正算得上是測驗統計或心理計量領域的研究者本來就已經不多。而這些學者裡面真正關注在「當代測量模型」的人可以說是非常稀有（我把 SEM 相關的那些都排除掉了，寫 SEM 的人倒是滿多的，包括我自己的<a href="https://hdl.handle.net/11296/zz563u">碩士論文</a>在內）。根據 Sijtsma 和 van der Ark (2020) 在 <em>Measurement models for psychological attributes</em> 書中定義的，就聚焦在：</p>
 <ul>
 <li>非參數IRT、</li>
 <li>IRT、</li>
